--- a/lab5/views/index.html
+++ b/lab5/views/index.html
@@ -6,7 +6,13 @@
     </head>
     <body>
         <p>
-            GOTO: <a href="/users">Users</a>
+            1: <a href="/users">PROMISE</a>
+        </p>
+        <p>
+            2: <a href="/users/observable">OBSERVABLE</a>
+        </p>
+        <p>
+            3: <a href="/users/async">ASYC/WAIT</a>
         </p>
     </body>
 </html>
