--- a/lab5/views/index.html
+++ b/lab5/views/index.html
@@ -5,14 +5,10 @@
         <title>Lab5</title>
     </head>
     <body>
-        <p>
-            1: <a href="/users">PROMISE</a>
-        </p>
-        <p>
-            2: <a href="/users/observable">OBSERVABLE</a>
-        </p>
-        <p>
-            3: <a href="/users/async">ASYC/WAIT</a>
-        </p>
+        <ol>
+            <li><a href="/users">PROMISE</a></li>
+            <li><a href="/users/observable">OBSERVABLE</a></li>
+            <li><a href="/users/async">ASYC/WAIT</a></li>
+        </ol>
     </body>
 </html>
