--- a/lab5/views/users.html
+++ b/lab5/views/users.html
@@ -5,7 +5,7 @@
         <title>Lab5</title>
     </head>
     <body>
-        <h1>USER BY METHOD {{ method }}</h1>
+        <h1>USERS BY METHOD {{ method }}</h1>
         <table border="1">
             <thead>
                 <tr>
