--- a/lab13/src/app/profile/profile.component.html
+++ b/lab13/src/app/profile/profile.component.html
@@ -1,5 +1,5 @@
 <div>
-  <h2>{{ student.name }}'s profile</h2>
+  <h2><span [ngStyle]="{'text-transform': 'uppercase'}">{{ student.name }}</span>'s profile</h2>
   <p>
     <b>STUDENT ID</b>: {{ student.stuID }} 
   </p>
