--- a/lab13/src/app/home/home.component.html
+++ b/lab13/src/app/home/home.component.html
@@ -2,11 +2,11 @@
   <img src="https://mscs.mum.edu/images/logo_blue.png" />
   <h1>Master of Science in Computer Science</h1>
   <h2>Welcome to MUM</h2>
-  <p>
+  <p align="justify">
       Maharishi University of Management (MUM), formerly Maharishi International University, 
-      is an American non-profit university located in Fairfield, Iowa. 
+      is an American non-profit university located in Fairfield, Iowa.
       It was founded in 1973 by Maharishi Mahesh Yogi and features a "consciousness-based education" 
-      system that includes the practice of the Transcendental Meditation technique.[6][7] 
+      system that includes the practice of the Transcendental Meditation technique.
       Its founding principles include the development of the full potential of the individual, 
       fulfilling economic aspirations while maximizing proper use of the environment and bringing 
       spiritual fulfillment and happiness to humanity.
