--- a/lab13/src/app/home/home.component.html
+++ b/lab13/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <div align="center">
   <img src="https://mscs.mum.edu/images/logo_blue.png" />
-  <h1>Master of Science in Computer Science</h1>
-  <h2>Welcome to MUM</h2>
+  <h1>Maharishi University of Management</h1>
+  <h2>Welcome to MS of MUM</h2>
   <p align="justify">
       Maharishi University of Management (MUM), formerly Maharishi International University, 
       is an American non-profit university located in Fairfield, Iowa.
