--- a/lab13/src/app/page-not-found/page-not-found.component.html
+++ b/lab13/src/app/page-not-found/page-not-found.component.html
@@ -1,6 +1,6 @@
 <div align="center">
   <img src="https://mscs.mum.edu/images/logo_blue.png" />
-  <h1>Master of Science in Computer Science</h1>
+  <h1>Maharishi University of Management</h1>
   <br/>
-  <h2 style="color: red">OOPS! NOT FOUND</h2>
+  <h2 style="color: red">OOPS! 404 NOT FOUND</h2>
 </div>
